--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "vite": "^4.4.11"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-video": "^0.8.0",
     "plyr": "^3.7.8",
     "video.js": "^8.6.0"
   }
