--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
-    "@splidejs/splide-extension-video": "^0.8.0",
-    "plyr": "^3.7.8",
-    "video.js": "^8.6.0"
+    "plyr": "^3.7.8"
   }
 }
